--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Scriptix - Future-Driven Software Development</title>
+  <title>NovaCode - Future-Driven Software Development</title>
   <meta name="description" content="We craft high-quality digital solutions that help businesses grow, scale, and innovate in a fast-changing world." />
   <meta name="author" content="Scriptix" />
 
